[package]
name = "vsched-axtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
multitask = []

default = ["multitask"]

irq = []
tls = ["axhal/tls"]
preempt = ["irq", "percpu/preempt", "kernel_guard/preempt"]
smp = ["kspin/smp"]

sched-fifo = ["multitask"]
sched-rr = [
    "multitask",
    "preempt",
    "base_task/sched-rr",
    "vsched_apis/sched-rr",
]
sched-cfs = [
    "multitask",
    "preempt",
    "base_task/sched-cfs",
    "vsched_apis/sched-cfs",
]

test = ["percpu/sp-naive"]

[dependencies]
axhal = { workspace = true, features = ["paging"] }
axmm = { workspace = true }
axlog = { workspace = true }

percpu = "0.2"

axerrno = "0.1"
axalloc = { workspace = true }
log = "0.4"


cfg-if = "1.0"
axconfig = { workspace = true }
kspin = { version = "0.1" }
lazyinit = { version = "0.2" }
memory_addr = { version = "0.4" }
timer_list = { version = "0.1" }
kernel_guard = { version = "0.1" }
crate_interface = { version = "0.1" }
cpumask = { version = "0.1" }

vsched_apis = { git = "https://github.com/AsyncModules/vsched.git" }
scheduler = { git = "https://github.com/AsyncModules/vsched.git" }
config = { git = "https://github.com/AsyncModules/vsched.git" }
base_task = { git = "https://github.com/AsyncModules/vsched.git" }
utils = { git = "https://github.com/AsyncModules/vsched.git" }
xmas-elf = "0.9.0"
kernel-elf-parser = "0.1.0"
