[package]
name = "vsched-axtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[features]
default = []

multitask = [
    "dep:axconfig",
    "dep:percpu",
    "dep:kspin",
    "dep:lazyinit",
    "dep:memory_addr",
    "dep:axsched",
    "dep:timer_list",
    "kernel_guard",
    "dep:crate_interface",
    "dep:cpumask",
    "dep:axmm",
    "dep:axerrno",
    "dep:axalloc",
    "dep:vsched_apis",
    "dep:config",
    "dep:base_task",
    "dep:utils",
    "dep:xmas-elf",
    "dep:kernel-elf-parser",
]
irq = []
tls = ["axhal/tls"]
preempt = ["irq", "percpu?/preempt", "kernel_guard/preempt"]
smp = ["kspin/smp"]

sched-fifo = ["multitask"]
sched-rr = [
    "multitask",
    "preempt",
    "base_task?/sched-rr",
    "vsched_apis?/sched-rr",
]
sched-cfs = [
    "multitask",
    "preempt",
    "base_task?/sched-cfs",
    "vsched_apis?/sched-cfs",
]

test = ["percpu?/sp-naive"]

[dependencies]
cfg-if = "1.0"
log = "=0.4.21"
axhal = { workspace = true, features = ["paging"] }
axconfig = { workspace = true, optional = true }
percpu = { version = "0.2", optional = true }
kspin = { version = "0.1", optional = true }
lazyinit = { version = "0.2", optional = true }
memory_addr = { version = "0.4", optional = true }
timer_list = { version = "0.1", optional = true }
kernel_guard = { version = "0.1", optional = true }
crate_interface = { version = "0.1", optional = true }
cpumask = { version = "0.1", optional = true }
axsched = { version = "0.3", optional = true }

axmm = { workspace = true, optional = true }
axerrno = { version = "0.1", optional = true }
axalloc = { workspace = true, optional = true }

vsched_apis = { path = "../../vsched/vsched_apis", optional = true }
config = { path = "../../vsched/config", optional = true }
base_task = { path = "../../vsched/base_task", features = [
    "alloc",
], optional = true }
utils = { path = "../../vsched/utils", optional = true }
xmas-elf = { version = "0.9.0", optional = true }
kernel-elf-parser = { version = "0.3.3", optional = true }
elf_parser = { git = "https://github.com/Starry-OS/elf_parser.git" }
[dev-dependencies]
rand = "0.9"
axhal = { workspace = true, features = ["fp-simd"] }
axtask = { workspace = true, features = ["test", "multitask"] }
